# 26a-emb-aps-1-apsjc-1

./: CMakeLists.txt  audio_animal.h  audio_voz.h  bash.exe.stackdump  blabla.c  display.c  display.h  genius.h  genius_audio.c  genius_audio.h  genius_display.c  genius_display.h  genius_flash.c  genius_flash.h  genius_input.c  genius_input.h  main.c
main/: CMakeLists.txt  main.c
tft_lcd_ili9341/gfx/: gfx_ili9341.c
tft_lcd_ili9341/touch_resistive/: CMakeLists.txt
